[project]
name = "leafsim"
version = "0.2.0"
description = "Explainable AI for tree based ensemble models"
readme = "README.md"
authors = [{ name = "Lucas Chizzali", email = "lucas.chizzali@datascience.ch"}]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy >= 1.23.5",
    "scikit-learn >= 1.1.3"
]
keywords = ["ML", "XAI", "explainable AI"]

[build-system]
requires = [
  "setuptools >= 65.5.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["leafsim"]
namespaces = false