[project]
name = "leafsim"
version = "1.0.0"
description = "Explainable AI for tree based ensemble models"
readme = "README.md"
authors = [{ name = "Lucas Chizzali", email = "lucas.chizzali@gmail.com"}]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy >= 1.23.5",
    "ruff>=0.15.12",
    "scikit-learn >= 1.1.3",
]
keywords = ["ML", "XAI", "explainable AI"]

[project.urls]
Repository = "https://github.com/calyptis/leafsim"
Documentation = "https://sdsc-innovation.github.io/leafsim/"

[dependency-groups]
dev = ["pytest>=7.0"]
notebooks = ["matplotlib>=3.6", "notebook>=7.0", "pandas>=1.5", "seaborn>=0.12", "xgboost>=1.7"]

[build-system]
requires = [
  "setuptools >= 65.5.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 99
exclude = ["notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["leafsim"]

[tool.setuptools.packages.find]
include = ["leafsim"]
namespaces = false
